# scmd

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  runner.rs
src/cli/: mod.rs  parameter.rs
src/config/: command.rs  default.rs  envset.rs  mod.rs  parameter.rs
src/opt/: mod.rs  parameter.rs
src/util/: cstring.rs  libc.rs  mod.rs  value.rs
