[package]
name = "scmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
confy = "0.5.1"
directories = "4.0.1"
itertools = "0.10.5"
nix = "0.26.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
toml = "0.5.10"
